spike/tree-sitter-enma/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.preprocessor_directive,
      $.import_declaration,
      $.using_declaration,
      $.namespace_declaration,
      $.class_declaration,
      $.struct_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.delegate_declaration,
      $.template_declaration,
      $.extern_declaration,
      $.function_declaration,
      $.operator_declaration,
      $.mixin_declaration,
      $.typedef_declaration,
      $.variable_declaration,
      $.empty_statement,
    ),

    // -----------------------------------------------------------------------
    // Comments
    // -----------------------------------------------------------------------
    preprocessor_directive: $ => token(
      /#[ \t]*(include|define|undef|ifdef|ifndef|if|elif|else|endif|pragma)[^\n]*/,
    ),

    // -----------------------------------------------------------------------
    // Import / using
    // -----------------------------------------------------------------------
    annotation_list: $ => repeat1($.annotation),

    annotation: $ => seq(
      '[[',
      $.identifier,
      optional(seq('(', optional($._annotation_arg), ')')),
      ']]',
    ),

    _annotation_arg: $ => choice(
      $.string_literal,
      $.number_literal,
      $.identifier,
    ),

    // -----------------------------------------------------------------------
    // Namespace
    // -----------------------------------------------------------------------
    namespace_declaration: $ => seq(
      'namespace',
      $.identifier,
      '{',
      repeat($._top_level_item),
      '}',
    ),

    // -----------------------------------------------------------------------
    // Enum
    // -----------------------------------------------------------------------
    enum_declaration: $ => seq(
      optional($.annotation_list),
      'enum',
      $.identifier,
      '{',
      commaSep($.enum_variant),
      optional(','),
      '}',
    ),

    enum_variant: $ => seq(
      $.identifier,
      optional(seq('=', $._expression)),
    ),

    // -----------------------------------------------------------------------
    // Delegate
    // -----------------------------------------------------------------------
    delegate_declaration: $ => seq(
      optional($.annotation_list),
      'delegate',
      $._decl_type,
      $.identifier,
      $.parameter_list,
      ';',
    ),

    // -----------------------------------------------------------------------
    // Interface
    // -----------------------------------------------------------------------
    interface_declaration: $ => seq(
      optional($.annotation_list),
      'interface',
      $.identifier,
      optional($.base_list),
      '{',
      repeat($._member_item),
      '}',
    ),

    // -----------------------------------------------------------------------
    // Struct
    // -----------------------------------------------------------------------
    struct_declaration: $ => seq(
      optional($.annotation_list),
      'struct',
      $.identifier,
      optional($.base_list),
      '{',
      repeat($._member_item),
      '}',
    ),

    // -----------------------------------------------------------------------
    // Class
    // -----------------------------------------------------------------------
    class_declaration: $ => seq(
      optional($.annotation_list),
      'class',
      $.identifier,
      optional($.base_list),
      '{',
      repeat($._member_item),
      '}',
    ),

    // Multi-inheritance: `: Base1, Base2`
    base_list: $ => seq(':', commaSep1($._decl_type)),

    // -----------------------------------------------------------------------
    // Template
    // -----------------------------------------------------------------------
    template_declaration: $ => seq(
      optional($.annotation_list),
      'template',
      '<',
      commaSep1($.template_parameter),
      '>',
      choice(
        $.function_declaration,
        $.class_declaration,
        $.struct_declaration,
      ),
    ),

    template_parameter: $ => seq(
      choice('typename', 'class'),
      $.identifier,
    ),

    // -----------------------------------------------------------------------
    // Extern
    // -----------------------------------------------------------------------
    extern_declaration: $ => seq(
      optional($.annotation_list),
      'extern',
      $._decl_type,
      $.identifier,
      $.parameter_list,
      ';',
    ),

    // -----------------------------------------------------------------------
    // Class members
    // -----------------------------------------------------------------------
    _member_item: $ => choice(
      $.constructor_declaration,
      $.destructor_declaration,
      $.method_declaration,
      $.field_declaration,
      $.operator_declaration,
      $.property_declaration,
    ),

    field_declaration: $ => seq(
      optional($.annotation_list),
      optional($.modifier_list),
      $._decl_type,
      $.identifier,
      optional(seq('[', $._expression, ']')),
      optional(seq('=', $._expression)),
      ';',
    ),

    method_declaration: $ => seq(
      optional($.annotation_list),
      optional($.modifier_list),
      $._decl_type,
      $.identifier,
      $.parameter_list,
      choice($.block, ';'),
    ),

    _modifier: $ => choice(
      'static', 'const', 'constexpr', 'override',
      'public', 'private',
      'inline', 'volatile', 'nullable', 'out',
      'coroutine',
    ),

    // -----------------------------------------------------------------------
    // Free function
    // -----------------------------------------------------------------------
    function_declaration: $ => seq(
      optional($.annotation_list),
      optional($.modifier_list),
      $._decl_type,
      $.identifier,
      $.parameter_list,
      choice($.block, ';'),
    ),

    // -----------------------------------------------------------------------
    // Parameters
    // -----------------------------------------------------------------------
    parameter_list: $ => seq(
      '(',
      choice(
        seq(commaSep($.parameter), optional(seq(optional(','), $.variadic_param))),
        $.variadic_param,
        /* empty */
      ),
      ')',
    ),

    parameter: $ => seq(
      optional($._modifier),
      $._decl_type,
      optional($.identifier),
      optional(seq('=', $._expression)),
    ),

    variadic_param: $ => '...',

    // -----------------------------------------------------------------------
    // Variable declaration
    // -----------------------------------------------------------------------
    variable_declaration: $ => seq(
      optional($.modifier_list),
      $._decl_type,
      $.identifier,
      optional(seq('=', $._expression)),
      ';',
    ),

    // -----------------------------------------------------------------------
    // Statements
    // -----------------------------------------------------------------------
    _statement: $ => choice(
      $.block,
      $.if_statement,
      $.for_statement,
      $.foreach_statement,
      $.while_statement,
      $.do_while_statement,
      $.switch_statement,
      $.try_statement,
      $.defer_statement,
      $.return_statement,
      $.yield_statement,
      $.throw_statement,
      $.break_statement,
      $.continue_statement,
      $.goto_statement,
      $.label_statement,
      $.variable_declaration,
      $.expression_statement,
      $.empty_statement,
    ),

    block: $ => seq('{', repeat($._statement), '}'),

    foreach_statement: $ => seq(
      'for', '(',
      $._decl_type, $.identifier, ':', $._expression,
      ')', $._statement,
    ),

    while_statement: $ => seq(
      'while', '(', $._expression, ')', $._statement,
    ),

    try_statement: $ => seq(
      'try', $.block, repeat1($.catch_clause),
    ),

    catch_clause: $ => seq(
      'catch', '(', $._decl_type, $.identifier, ')', $.block,
    ),

    defer_statement: $ => seq('defer', $.block),

    return_statement: $ => seq('return', optional($._expression), ';'),
    throw_statement: $ => seq('throw', $._expression, ';'),
    expression_statement: $ => seq($._expression, ';'),

    // -----------------------------------------------------------------------
    // Expressions
    // -----------------------------------------------------------------------
    _expression: $ => choice(
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
      $.cast_expression,
      $.new_expression,
      $.delete_expression,
      $.sizeof_expression,
      $.offsetof_expression,
      $.static_assert_expression,
      $.match_expression,
      $.call_expression,
      $.member_expression,
      $.pointer_member_expression,
      $.index_expression,
      $.lambda_bracket,
      $.lambda_arrow,
      $.function_reference,
      $.fstring_literal,
      $.string_literal,
      $.char_literal,
      $.number_literal,
      $.bool_literal,
      $.null_literal,
      $.this_expression,
      $.identifier_expression,
      $.qualified_name_expression,
      $.designated_initializer_list,
      $.array_literal,
      $.intrinsic_expression,
      $.parenthesized_expression,
    ),

    assignment_expression: $ => prec.right(1, seq(
      $._expression,
      choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>='),
      $._expression,
    )),

    ternary_expression: $ => prec.right(2, seq(
      $._expression, '?', $._expression, ':', $._expression,
    )),

    binary_expression: $ => choice(
      prec.left(3,  seq($._expression, '||', $._expression)),
      prec.left(4,  seq($._expression, '&&', $._expression)),
      prec.left(5,  seq($._expression, '|',  $._expression)),
      prec.left(6,  seq($._expression, '^',  $._expression)),
      prec.left(7,  seq($._expression, '&',  $._expression)),
      prec.left(8,  seq($._expression, choice('==', '!='), $._expression)),
      prec.left(9,  seq($._expression, choice('<', '>', '<=', '>='), $._expression)),
      prec.left(10, seq($._expression, choice('<<', '>>'), $._expression)),
      prec.left(11, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(12, seq($._expression, choice('*', '/', '%'), $._expression)),
    ),

    unary_expression: $ => prec.right(13, seq(
      choice('!', '-', '+', '~', '++', '--', '&', '*'),
      $._expression,
    )),

    new_expression: $ => prec.right(14, seq(
      'new', $._decl_type,
      optional(seq('(', commaSep($._expression), ')')),
    )),

    delete_expression: $ => prec(14, seq('delete', $._expression)),

    match_expression: $ => seq(
      'match', '(', $._expression, ')',
      '{', commaSep1($.match_arm), optional(','), '}',
    ),

    match_arm: $ => seq($._match_pattern, '=>', $._expression),

    _match_pattern: $ => choice($.wildcard_pattern, $._expression),

    wildcard_pattern: $ => '_',

    call_expression: $ => prec.left(15, seq(
      $._expression, '(', commaSep($._expression), ')',
    )),

    member_expression: $ => prec.left(16, seq(
      $._expression, '.', $.identifier,
    )),

    pointer_member_expression: $ => prec.left(16, seq(
      $._expression, '->', $.identifier,
    )),

    index_expression: $ => prec.left(16, seq(
      $._expression, '[', $._expression, ']',
    )),

    lambda_bracket: $ => prec(1, seq(
      '[', optional($.capture_list), ']',
      $.parameter_list,
      optional(seq('->', $._decl_type)),
      $.block,
    )),

    function_reference: $ => seq('@', $.identifier),

    // -----------------------------------------------------------------------
    // Intrinsics
    // -----------------------------------------------------------------------
    intrinsic_expression: $ => choice(
      '__va_count',
      seq('__va_arg', '(', $._expression, ')'),
      seq('__asm_rdtsc', '(', ')'),
      seq('__asm_pause', '(', ')'),
    ),

    // -----------------------------------------------------------------------
    // Designated initializer  { .x = 1, .y = 2 }
    // -----------------------------------------------------------------------
    designated_initializer_list: $ => prec(1, seq(
      '{', commaSep1($.designated_initializer), optional(','), '}',
    )),

    designated_initializer: $ => seq('.', $.identifier, '=', $._expression),

    // -----------------------------------------------------------------------
    // Array / aggregate literal  { expr, ... }
    // -----------------------------------------------------------------------
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    identifier_expression: $ => $.identifier,

    type_name: $ => prec.right(choice(
      $._primitive_type,
      $.generic_type,
      $.pointer_type,
      $.qualified_type,
      $.identifier,
    )),

    // _decl_type: alias of type_name, kept for readability in declaration rules.
    _decl_type: $ => $.type_name,

    _primitive_type: $ => choice(
      'int8', 'int16', 'int32', 'int64',
      'uint8', 'uint16', 'uint32', 'uint64',
      'aint8', 'aint16', 'aint32', 'aint64',
      'float32', 'float64', 'float', 'double',
      'bool', 'void', 'char', 'wchar',
      'string', 'wstring', 'size_t',
      'auto', 'decltype',
    ),

    // generic_type uses raw '<' — GLR handles ambiguity with binary_expression.
    // _generic_type_arg intentionally excludes bare identifier so that keyword
    // literals (true/false/null) cannot be mistaken for type arguments.
    pointer_type: $ => prec.right(1, seq($.type_name, '*')),

    qualified_type: $ => prec(1, seq(
      $.identifier, repeat1(seq('::', $.identifier)),
    )),

    // -----------------------------------------------------------------------
    // Literals
    // -----------------------------------------------------------------------

    // §A2 f-string boundary contract — tokens emitted by external scanner
    fstring_literal: $ => seq(
      $.fstring_start,
      repeat(choice(
        $.fstring_text,
        seq($.fstring_expr_open, $._expression, $.fstring_expr_close),
      )),
      $.fstring_end,
    ),

    string_literal: $ => token(seq('"', /([^"\\]|\\.)*/, '"')),

    number_literal: $ => token(choice(
      /0[xX][0-9a-fA-F]+/,
      // Float with optional UDL suffix (e.g. 1.5f_meter)
      /[0-9]+\.[0-9]*([eE][+-]?[0-9]+)?f?(_[a-zA-Z][a-zA-Z0-9_]*)?/,
      /[0-9]+[eE][+-]?[0-9]+f?(_[a-zA-Z][a-zA-Z0-9_]*)?/,
      // Integer UDL (e.g. 42_km)
      /[0-9]+_[a-zA-Z][a-zA-Z0-9_]*/,
      // Plain float with f suffix
      /[0-9]+f/,
      // Plain integer
      /[0-9]+/,
    )),

    this_expression: $ => 'this',
  },
});

// ---------------------------------------------------------------------------
// Helpers
// ---------------------------------------------------------------------------
function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
